[package]
name = "build_tomo_rs"
version = "0.1.0"
authors = ["Peyton Vaughn <p8yton@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.8"
rust-crypto = "^0.2"
rocket = "0.4.6"

[dev-dependencies]
cargo-watch = "7.5.0"


