[package]
name = "build_tomo_rs"
version = "0.1.0"
authors = ["Peyton Vaughn <p8yton@gmail.com>"]
edition = "2018"

[[bin]]
name = "build-tomo-server"
test = false
bench = false
path = "src/main.rs"

[dependencies]
env_logger = "0.8"
hex = "0.4.2"
hmac = "0.10.1"
log = "0.4.14"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
sha2 = "0.9.3"
rocket = "0.4.7"
rocket_contrib = "0.4.7"
rust-crypto = "^0.2"
tinytemplate = "^1.2.0"
kube = "^0.50.1"
k8s-openapi = { version = "0.11.0", features = ["v1_20"], default-features = false }
futures = "0.3.13"
tokio = { version = "1.0.1", features = ["full"] }

[dev-dependencies]
cargo-watch = "7.5.0"



